--- a/smart_electric/SmartBillApp/templates/index.html
+++ b/smart_electric/SmartBillApp/templates/index.html
@@ -1,15 +1,17 @@
 {% extends "layout.html" %}
 {% block title %}
-
-
+Welcome
 {% endblock %}
 {% block content %}
+{% load static%}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <section  class="main py-5" id="main">
         
 		<div class="container-fluid py-5">
 			<div class="row py-5">
 				<div class = "col-lg-12 col-mg-12 py-5 mr-auto">
-					<h1 >Smart Electric Energy Monitoring System</h1>
+					<h1 style="text-align:center;">Smart Electric Energy Monitoring System</h1>
+          <p style="text-align:center;"><b>Welcome to this portal </b></p>
                     <div class="slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
@@ -35,31 +37,11 @@
   <span class="dot"></span> 
   <span class="dot"></span> 
 </div>
-					<p class="text-right">Welcome to this portal </p>
+					
                     <p>Please Login to continue...........</p>
 				</div>
 			</div>
 		</div>	 
 	</section>
-    <script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
+    <script src=" {% static 'js/images.js' %}"></script>
 {% endblock %}
