--- a/smart_electric/SmartBillApp/templates/layout.html
+++ b/smart_electric/SmartBillApp/templates/layout.html
@@ -3,16 +3,17 @@
 <html>
 <head>
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% block title %}{% endblock %}</title>
 
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
 <div class="navbar">
-<ahref="/home"class="navbar-brand">Home</a>
-<ahref="/about"class="navbar-item">About</a>
-<ahref="/contact"class="navbar-item">Contact</a>
+<a href="/home" class="navbar-brand">Home</a>
+<a href="/about" class="navbar-item">About</a>
+<a href="/contact" class="navbar-item">Contact</a>
 </div>
 
 <div class="body-content">
