--- a/smart_electric/SmartBillApp/templates/login.html
+++ b/smart_electric/SmartBillApp/templates/login.html
@@ -8,7 +8,7 @@
  <div class="bg-img">
 			<div class="content">
 			   <header>Login Form</header>
-			   <form action="main.html#main" name="register" method ="POST">
+			   <form action="./main/" name="register" method ="POST">
 				  <div class="field">
 					 <span class="fa fa-user"></span>
 					 <input type="digits" id='number'maxlength="12" onblur="phonenumchk()"  required placeholder="Phone Number">
