--- a/smart_electric/SmartBillApp/static/css/style.css
+++ b/smart_electric/SmartBillApp/static/css/style.css
@@ -1,3 +1,21 @@
+* {
+	padding:0;
+	margin:0;
+	box-sizing: border-box;
+	
+}
+.body{
+	padding: 0%;
+}
+.html,.body{
+     width:100%;
+     height:100%;
+     margin:0;
+     padding:0;
+     overflow-x:hidden;
+	 margin-bottom: 0;
+	 margin-right: 0rem;
+}
 .body-content {
   background-color: rgb(248, 213, 139);
 
@@ -16,7 +34,7 @@
 }
 .navbar-brand {
     font-size:1.2em;
-    font-weight:600;
+    font-weight:100%;
 }
 
 .navbar-item {
@@ -44,9 +62,21 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
+}
+.btn{
+	background-color: #4169E1;
+	outline:none;
+	border:none;
+
+}
+.btn:hover{
+	background-color:transparent;
+	color:black;
+	border:1px solid black;
+	transition:0.5s;
 }
 
 /* Caption text */
