--- a/smart_electric/SmartBillApp/templates/index.html
+++ b/smart_electric/SmartBillApp/templates/index.html
@@ -4,6 +4,7 @@ Welcome
 {% endblock %}
 {% block content %}
 {% load static%}
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <section  class="main py-5" id="main">
         
@@ -12,6 +13,7 @@ Welcome
 				<div class = "col-lg-12 col-mg-12 py-5 mr-auto">
 					<h1 style="text-align:center;">Smart Electric Energy Monitoring System</h1>
           <p style="text-align:center;"><b>Welcome to this portal </b></p>
+          
                     <div class="slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
@@ -39,6 +41,9 @@ Welcome
 </div>
 					
                     <p>Please Login to continue...........</p>
+                    <form action="login/">
+                    <button class="btn"><i class="fa fa-download"></i>Login</button>
+                    </form>
 				</div>
 			</div>
 		</div>	 
