--- a/smart_electric/SmartBillApp/templates/index.html
+++ b/smart_electric/SmartBillApp/templates/index.html
@@ -42,7 +42,7 @@ Welcome
 					
                     <p>Please Login to continue...........</p>
                     <form action="login/">
-                    <button class="btn"><i class="fa fa-download"></i>Login</button>
+                    <a class="btn btn-primary" href="login/" role="button">Login</a>
                     </form>
 				</div>
 			</div>
