--- a/smart_electric/SmartBillApp/templates/login.html
+++ b/smart_electric/SmartBillApp/templates/login.html
@@ -22,7 +22,7 @@
 					 <a href="forgot.html">Forgot Password?</a>
 				  </div>
 				  <div class="field">
-					 <input onclick ="window.location.href='main.html';"type="submit" value="LOGIN">
+					 <input onclick ="window.location.href='../main/';"type="submit" value="LOGIN">
 				  </div>
 			   </form>
 			   <div class="signup">
