--- a/smart_electric/SmartBillApp/templates/index.html
+++ b/smart_electric/SmartBillApp/templates/index.html
@@ -6,30 +6,34 @@ Welcome
 {% load static%}
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<div class="navbar">
+<a class="btn btn-primary" href="login/" role="button">Login</a>
+</div>
 <section  class="main py-5" id="main">
         
 		<div class="container-fluid py-5">
 			<div class="row py-5">
 				<div class = "col-lg-12 col-mg-12 py-5 mr-auto">
 					<h1 style="text-align:center;">Smart Electric Energy Monitoring System</h1>
-          <p style="text-align:center;"><b>Welcome to this portal </b></p>
-          
+                    <br>
+                    <p style="text-align:center;"><b>Welcome to this portal </b></p>
+                    <br>
                     <div class="slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
-                                <img src="../static/images/back5.jpg" style="width:100%">
+                                <img src="../static/images/back5.jpg" style="width:50%">
                                         <div class="text">Caption Text</div>
                             </div>
 
                             <div class="mySlides fade">
                                 <div class="numbertext">2 / 3</div>
-                                    <img src="../static/images/back2.jpg" style="width:100%">
+                                    <img src="../static/images/back2.jpg" style="width:50%">
                                          <div class="text">Caption Two</div>
                                             </div>
 
                             <div class="mySlides fade">
                                 <div class="numbertext">3 / 3</div>
-                                    <img src="../static/images/back1.jpg" style="width:100%">
+                                    <img src="../static/images/back1.jpg" style="width:50%">
                                      <div class="text">Caption Three</div>
                                 </div>
 
@@ -41,9 +45,6 @@ Welcome
 </div>
 					
                     <p>Please Login to continue...........</p>
-                    <form action="login/">
-                    <a class="btn btn-primary" href="login/" role="button">Login</a>
-                    </form>
 				</div>
 			</div>
 		</div>	 
