--- a/smart_electric/SmartBillApp/templates/main.html
+++ b/smart_electric/SmartBillApp/templates/main.html
@@ -10,14 +10,13 @@ Welcome to main page
 <a href="/about" class="navbar-item">About</a>
 <a href="/contact" class="navbar-item">Contact</a>
 </div>
-<section  class="main py-5" id="main">
-        
+<section  class="main1 py-5" id="main">
 		<div class="container-fluid py-5">
 			<div class="row py-5">
 				<div class = "col-lg-12 col-mg-12 py-5 mr-auto">
 					<h1 style="text-align:center;">Smart Electric Energy Monitoring System</h1>
                     <p style="text-align:center;"><b>Welcome to this portal </b></p>
-                    
+                    <img src="{% static 'images/elec.jpg' %}" alt="Board image">
 					
 				</div>
 			</div>
