--- a/smart_electric/SmartBillApp/templates/contact.html
+++ b/smart_electric/SmartBillApp/templates/contact.html
@@ -17,7 +17,7 @@
             <div class="card p-3 py-4 mt-5 mb-5">
                 <div class="text-center"> <img src="{% static 'images/subbu.jpg' %}" alt="Subbu image" width="100" class="rounded-circle" > 
                     <h3 class="mt-2">Subramanya K S</h3> <span class="mt-1 clearfix">Web Developer</span> <small class="mt-4">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
-                    <div class="social-buttons mt-5"><a href="https://github.com/SubramanyaKS"> <button class="neo-button" ><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.linkedin.com/in/subramanya-k-s-b74a92204/"><button class="neo-button" ><i class="fab fa-linkedin fa-1x"></i></button></a> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                    <div class="social-buttons mt-5"><a href="https://github.com/SubramanyaKS"> <button class="neo-button" ><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.linkedin.com/in/subramanya-k-s-b74a92204/"><button class="neo-button" ><i class="fab fa-linkedin fa-1x"></i></button></a><a href="mailto:subramanyaks2205@gmail.com"> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button> </a><a href="https://www.youtube.com/channel/UCg28-MrcK-8CCFos7FWp0Dg/"><button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button></a> </div>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <div class="card p-3 py-4 mt-5">
                 <div class="text-center"><img src="{% static 'images/shivam.jpg' %}" alt="Sanjay image" width="100" class="rounded-circle" > 
                     <h3 class="mt-2"> Shivam Kumar</h3> <span class="mt-1 clearfix">Web Developer</span> <small class="mt-4">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
-                    <div class="social-buttons mt-5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button> <a href="https://www.facebook.com/shivamrj5/"> <button class="neo-button"><i class="fab fa-facebook fa-1x"></i></button></a> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                    <div class="social-buttons mt-5"><a href="https://github.com/shivamrj5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.facebook.com/shivamrj5/"> <button class="neo-button"><i class="fab fa-facebook fa-1x"></i></button></a> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
                 </div>
             </div>
         </div>
