--- a/smart_electric/SmartBillApp/templates/index.html
+++ b/smart_electric/SmartBillApp/templates/index.html
@@ -1,11 +1,18 @@
-{% extends "layout.html" %}
-{% block title %}
-Welcome
-{% endblock %}
-{% block content %}
-{% load static%}
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>{% block title %}{% endblock %}</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+</head>
+<body>
 <div class="navbar">
 <a class="btn btn-primary" href="login/" role="button">Login</a>
 </div>
@@ -49,5 +56,10 @@ Welcome
 			</div>
 		</div>	 
 	</section>
+    <footer>
+<p>&copy; JNNCE</p>
+</footer>
     <script src=" {% static 'js/images.js' %}"></script>
-{% endblock %}
+
+</body>
+</html>
