--- a/smart_electric/SmartBillApp/templates/navbar.html
+++ b/smart_electric/SmartBillApp/templates/navbar.html
@@ -7,14 +7,14 @@
 <!-- CSS Custom File -->
 <link href="{% static 'css/navbar.css' %}" rel="stylesheet">
 
-<nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><img class="logo" src="{% static 'image/elec.png' %}" alt=""></a>
+<nav class="navbar navbar-expand-lg ">
+    <a class="navbar-brand" href="#"><img class="logo" src="{% static '/images/electric.jpg' %}" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/about">About</a>
             <a class="nav-item nav-link" href="/contact">Contact</a>
