--- a/smart_electric/SmartBillApp/templates/login.html
+++ b/smart_electric/SmartBillApp/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}
-
+Login to Website
 {% endblock %}
 {% block content %}
 {% load static %}
@@ -27,7 +27,7 @@
 			   </form>
 			   <div class="signup">
 				  Don't have account?
-				  <a href="farmer_signup.html">Signup Now</a>
+				  <a onclick ="window.location.href='../register/';">Signup Now</a>
 			   </div>
 			</div>
 		 </div>
