--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,7 +9,7 @@
     <body>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
+            <a href="/contact">Contact</a>
             <a href="#about">About</a>
           </div>
     </body>
