--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
+            <a class="active" href="/">Home</a>
             <a href="/contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="/about">About</a>
           </div>
     </body>
 </html>
