--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>
-
+            Smart Energy Monitoring
         </title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}"/>
     </head>
     <body>
@@ -12,5 +13,10 @@
         <div class="login">
             <button><a href="{{ url_for('login') }}">Login</a></button>
         </div>
+        <section>
+            <div>
+                <h3 style="text-align: center;"> Welcome to Smart Energy Monitoring System.</h3>
+            </div>
+        </section>
     </body>
 </html>
