--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
             <div class="container-fluid reveal py-5">
                 <div class="row">
                     <div class="col">
-                        <h3 style="text-justify: auto;">Electricity is one of the fundamental necessities of human beings, which is commonly used for domestic, industrial and agricultural purposes. Efficient energy utilization plays a very vital role for the development of smart grid in power system. So, proper monitoring and controlling of energy consumption is a chief priority of the smart grid. The existing energy meter system has many problems associated to it and one of the key problem is there is no full duplex communication. To solve this problem, a smart energy meter is proposed based on Web and Internet of Things (loT). The proposed IoT and Web based Electrical Energy monitoring System controls and calculates the energy consumption using Arduino, ESP 8266 12E, a Wi-Fi module and uploads it to the cloud database from where the consumer can view the reading and also get the cost information. Therefore, energy analyzation by the consumer becomes much easier and controllable. This system also helps in detecting power theft.</h3>
+                        <h3 style="text-justify: auto;">Electricity is one of the fundamental necessities of human beings, which is commonly used for domestic, industrial and agricultural purposes. Efficient energy utilization plays a very vital role for the development of smart grid in power system. So, proper monitoring and controlling of energy consumption is a chief priority of the smart grid. The existing energy meter system has many problems associated to it and one of the key problem is there is no full duplex communication.</h3>
                     </div>
                 </div>
 
