--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,15 +2,54 @@
 <html>
     <head>
         <meta charset="utf-8">
-
-    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/fontawesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}"/>
+        <link rel="stylesheet" href="{{ url_for('static',filename='contact.css') }}"/>
     </head>
     <body>
         {% include'nav.html' %}
-        <section>
-            
+        <section class="contact">
+            <div class="container-fluid reveal">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col mb-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5 mb-5">
+                            <div class="text-center"> <img src="{{ url_for('static',filename='puneeth.jpg') }}" alt="Puneeth img" width="100" class="rounded-circle">
+                                <h3 class="mt-2">Puneeth K S</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
+                                <div class="social-buttons mt-5"> <a href="https://github.com/Puneeth-Aacharya"> <button class="neo-button"><i class="fab fa-github fa-1x"></i></button></a>  <a href="https://www.linkedin.com/in/puneeth-aacharya-a4468419a/"> <button class="neo-button"><i class="fab fa-linkedin fa-1x"></i></button></a> <a href="mailto:puneethkspuneethks@gmail.com"><button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5 mb-5">
+                            <div class="text-center"> <img src="{{ url_for('static',filename='subbu.jpg') }}" alt="Subbu image" width="100" class="rounded-circle" > 
+                                <h3 class="mt-2">Subramanya K S</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
+                                <div class="social-buttons mt-5"><a href="https://github.com/SubramanyaKS"> <button class="neo-button" ><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.linkedin.com/in/subramanya-k-s-b74a92204/"><button class="neo-button" ><i class="fab fa-linkedin fa-1x"></i></button></a><a href="mailto:subramanyaks2205@gmail.com"> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button> </a><a href="https://www.youtube.com/channel/UCg28-MrcK-8CCFos7FWp0Dg/"><button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button></a> </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col mb-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5">
+                            <div class="text-center"><img src="{{ url_for('static',filename='sanjay.jpg') }}" alt="Sanjay image" width="100" class="rounded-circle" > 
+                                <h3 class="mt-2"> Baligara Sanjaykumara</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
+                                <div class="social-buttons mt-5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button> <a href="https://www.linkedin.com/in/baligara-sanjayakumara-a81b66215/"> <button class="neo-button"><i class="fab fa-linkedin fa-1x"></i></button></a><a href="mailto:baligarasanjayakumara@gmail.com"> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col mb-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5">
+                            <div class="text-center"><img src="{{ url_for('static',filename='shivam.jpg') }}" alt="Sanjay image" width="100" class="rounded-circle" > 
+                                <h3 class="mt-2"> Shivam Kumar</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
+                                <div class="social-buttons mt-5"><a href="https://github.com/shivamrj5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.facebook.com/shivamrj5/"> <button class="neo-button"><i class="fab fa-facebook fa-1x"></i></button></a> <a href="mailto:shivaamrj5@gmail.com"><button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+            </div>
         </section>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
     </body>
 </html>
