--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/fontawesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static',filename='contact.css') }}"/>
+        <!--<link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}"/>
+        -->
+            <link rel="stylesheet" href="{{ url_for('static',filename='contact.css') }}"/>
     </head>
     <body>
         {% include'nav.html' %}
