--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,6 +13,8 @@
     <body>
         {% include'nav.html' %}
         <section class="contact">
+            <br>
+            <h3 style="text-align: center;">Our Team</h3>
             <div class="container-fluid reveal">
                 <div class="row row-cols-1 row-cols-md-2">
                     <div class="col mb-4  d-flex align-items-stretch">
