--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,6 +52,9 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <p style="text-align: center;">&copy; 2021-22 IOT Energy Monitoring</p>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
     </body>
