--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,51 @@
         <title>
             Smart Energy Monitoring
         </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/fontawesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}"/>
     </head>
     <body>
-        {% include'nav.html' %}
-
-        <div class="login">
-            <button><a href="{{ url_for('login') }}">Login</a></button>
-        </div>
+        {% include'nav.html' %}        
         <section>
+            <br>
             <div>
                 <h3 style="text-align: center;"> Welcome to Smart Energy Monitoring System.</h3>
             </div>
+            <br>
+            <div class="container-fluid">
+                <br>
+                <div class="row row-cols-1">
+                    <div class="col">
+                        <div class="login" style="text-align: center;">
+                            <button class="btn  btn-lg btn-dark"><a href="{{ url_for('login') }}">Login</a></button>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col ">
+                        <div class="register" style="text-align: center;">
+                            <button class="btn  btn-lg btn-dark"><a href="{{ url_for('register') }}">Register</a></button>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col ">
+                        <div class="thingspeak" style="text-align: center;">
+                            <button class="btn btn-lg btn-dark"><a href="">Register for Thingspeak</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <footer class="footer">
+            <p style="text-align: center;">&copy; 2021-22 IOT Energy Monitoring</p>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
