--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
                         <tr><td><input type="text" name="meter_id" placeholder="Energy meter ID"></td></tr>
                         <tr><td><input type="password" name="password" placeholder="Enter Password"></td></tr>
                         <tr></tr><tr></tr><tr></tr>
-                        <tr><td><a  href="">Forgot password?</a></td><td><a href="{{ url_for('register') }}">Sign Up</a></td></tr>
+                        <tr><td><a  href="{{ url_for('forgot') }}">Forgot password?</a></td><td><a href="{{ url_for('register') }}">Sign Up</a></td></tr>
                     </table>
                     <br><br>
                     <input id="submit" type="submit" name="submit" value="Login">
