--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -21,7 +21,7 @@
                             <p>You can reset your password here.</p>
                             <div class="panel-body">
                 
-                                <form id="register-form" role="form" autocomplete="off" class="form" method="post">
+                                <form id="register-form" action="/change" role="form" autocomplete="off" class="form" method="post">
                 
                                 <div class="form-group">
                                     <div class="input-group">
@@ -31,6 +31,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                                   
                                 </div>
                                 
                                 <input type="hidden" class="hide" name="token" id="token" value=""> 
