--- a/templates/about.html
+++ b/templates/about.html
@@ -15,24 +15,23 @@
             <div class="about">
                 <h2 style="text-align: center;">About Smart Electric Energy Monitoring System.</h2>
             </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12 mt-3">
-                        <div class="card">
-                            <div class="card-horizontal">
-                                <div class="card-body">
-                                    <h3 style="text-justify: auto; color: black;">Electricity is one of the fundamental necessities of human beings, which is commonly used for domestic, industrial and agricultural purposes. Efficient energy utilization plays a very vital role for the development of smart grid in power system. So, proper monitoring and controlling of energy consumption is a chief priority of the smart grid. The existing energy meter system has many problems associated to it and one of the key problem is there is no full duplex communication.</h3>
-                                </div>
-                            </div>
-                        </div>
+            <center>
+            <div class="main">
+                <div class="sub_main" >
+                
+                    <div class="right_page">
+                        <h4>Electricity is one of the fundamental necessities of human beings, which is commonly used for domestic, industrial and agricultural purposes. Efficient energy utilization plays a very vital role for the development of smart grid in power system. So, proper monitoring and controlling of energy consumption is a chief priority of the smart grid. The existing energy meter system has many problems associated to it and one of the key problem is there is no full duplex communication.</h4>
                     </div>
+                    
                 </div>
+            </div>
+            </center>
 
 
             </div>
         </section>
-        <footer class="footer">
-            <p style="text-align: center;">&copy; 2021-22 IOT Energy Monitoring</p>
+        <footer class="footer" style="position: absolute;width:99%;bottom: 0;height: 60px;">
+            <p style="text-align: center;">&copy; 2021-22 IoT and Web Based Electrical Energy Monitoring System</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 	
