--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,8 +16,9 @@
             <br>
             <h3 style="text-align: center;">Our Team</h3>
             <div class="container-fluid reveal">
-                <div class="row row-cols-1 row-cols-md-2">
-                    <div class="col mb-4  d-flex align-items-stretch">
+                <div class="row row-cols-lg-4 row-cols-sm-2">
+                    <div class="col mt-4  d-flex align-items-stretch">
+
                         <div class="card p-3 py-4 mt-5 mb-5">
                             <div class="text-center"> <img src="{{ url_for('static',filename='puneeth.jpg') }}" alt="Puneeth img" width="100" class="rounded-circle">
                                 <h3 class="mt-2">Puneeth K S</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
@@ -25,7 +26,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col mb-4  d-flex align-items-stretch">
+                    <div class="col mt-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5 mb-5 ">
+                            <div class="text-center"><img src="{{ url_for('static',filename='sanjay.jpg') }}" alt="Sanjay image" width="100" class="rounded-circle" > 
+                                <h3 class="mt-2"> Baligara Sanjaykumara</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
+                                <div class="social-buttons mt-5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button> <a href="https://www.linkedin.com/in/baligara-sanjayakumara-a81b66215/"> <button class="neo-button"><i class="fab fa-linkedin fa-1x"></i></button></a><a href="mailto:baligarasanjayakumara@gmail.com"> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
+                            </div>
+                        </div>
+                     </div>
+                    <div class="col mt-4  d-flex align-items-stretch">
                         <div class="card p-3 py-4 mt-5 mb-5">
                             <div class="text-center"> <img src="{{ url_for('static',filename='subbu.jpg') }}" alt="Subbu image" width="100" class="rounded-circle" > 
                                 <h3 class="mt-2">Subramanya K S</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
@@ -33,16 +42,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col mb-4  d-flex align-items-stretch">
-                        <div class="card p-3 py-4 mt-5">
-                            <div class="text-center"><img src="{{ url_for('static',filename='sanjay.jpg') }}" alt="Sanjay image" width="100" class="rounded-circle" > 
-                                <h3 class="mt-2"> Baligara Sanjaykumara</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
-                                <div class="social-buttons mt-5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button> <a href="https://www.linkedin.com/in/baligara-sanjayakumara-a81b66215/"> <button class="neo-button"><i class="fab fa-linkedin fa-1x"></i></button></a><a href="mailto:baligarasanjayakumara@gmail.com"> <button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
-                            </div>
-                        </div>
-                     </div>
-                     <div class="col mb-4  d-flex align-items-stretch">
-                        <div class="card p-3 py-4 mt-5">
+                     
+                     <div class="col mt-4  d-flex align-items-stretch">
+                        <div class="card p-3 py-4 mt-5 mb-5">
                             <div class="text-center"><img src="{{ url_for('static',filename='shivam.jpg') }}" alt="Sanjay image" width="100" class="rounded-circle" > 
                                 <h3 class="mt-2"> Shivam Kumar</h3> <span class="mt-1 word clearfix">Web Developer</span> <small class="mt-4 word">Student at Jawaharlal Nehru National College of Engineering, Shivamogga</small>
                                 <div class="social-buttons mt-5"><a href="https://github.com/shivamrj5"> <button class="neo-button"><i class="fab fa-github fa-1x"></i> </button></a> <a href="https://www.facebook.com/shivamrj5/"> <button class="neo-button"><i class="fab fa-facebook fa-1x"></i></button></a> <a href="mailto:shivaamrj5@gmail.com"><button class="neo-button"><i class="fab fa-google fa-1x"></i> </button></a> <button class="neo-button"><i class="fab fa-youtube fa-1x"></i> </button> </div>
@@ -52,8 +54,9 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <p style="text-align: center;">&copy; 2021-22 IOT Energy Monitoring</p>
+        <br>
+        <footer class="footer" style="position: absolute;width:99%;bottom: 0;height: 40px;">
+            <p style="text-align: center;">&copy; 2021-22 IoT and Web Based Electrical Energy Monitoring System</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     
