--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -12,7 +12,7 @@
         <div class="mainDiv">
             <div class="cardStyle">
               <form action="" method="post" name="signupForm" id="signupForm">
-                
+                <input id="csrf_token" type="hidden" name="_csrf_token" value="{{ csrf_token()}}">
                 <img src="" id="signupLogo"/>
                 
                 <h2 class="formTitle">
