--- a/templates/forgot_verify_otp_set_pass.html
+++ b/templates/forgot_verify_otp_set_pass.html
@@ -21,17 +21,22 @@
                             <p>You can reset your password here.</p>
                             <div class="panel-body">
                 
-                                <form id="register-form" class="form" action="/forgot"  method="POST" >
+                                <form id="register-form" class="form" action="/forgot_verify_otp_set_pass"  method="POST" >
                 
                                 <div class="form-group">
                                     <div class="input-group">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                    <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
+                                    <input id="email" name="email" placeholder="email address" class="form-control"  type="email" value="{{ data }}">
                                     </div><br>
                                     <div>
+                                    <input id="email" name="pass1" placeholder="New Passowrd" class="form-control"  type="password">
+                                    </div><br>
+                                    <div>
+                                    <input id="email" name="pass2" placeholder="Confirm Password" class="form-control"  type="password">
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Send OTP" >
+                                    <input type="submit" name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" >
                                    
                                 </div>
                                  
