--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <section>
             <br>
             <div>
-                <h3 style="text-align: center;"> Welcome to Smart Energy Monitoring System.</h3>
+                <h2 style="text-align: center;"> Welcome to IoT and Web Based Electrical Energy Monitoring System.</h2>
             </div>
             <br>
             <div class="container-fluid">
@@ -24,7 +24,7 @@
                 <div class="row row-cols-1">
                     <div class="col">
                         <div class="login" style="text-align: center;">
-                            <button class="btn  btn-lg btn-dark"><a href="{{ url_for('login') }}">Login</a></button>
+                            <button class="btn  btn-lg btn-dark"><a style="color:black;" href="{{ url_for('login') }}">Login</a></button>
                         </div>
                         <br>
                     </div>
@@ -32,7 +32,7 @@
                     <br>
                     <div class="col ">
                         <div class="register" style="text-align: center;">
-                            <button class="btn  btn-lg btn-dark"><a href="{{ url_for('register') }}">Register</a></button>
+                            <button class="btn  btn-lg btn-dark"><a style="color:black;" href="{{ url_for('register') }}">Register</a></button>
                         </div>
                         <br>
                     </div>
@@ -40,14 +40,14 @@
                     <br>
                     <div class="col ">
                         <div class="thingspeak" style="text-align: center;">
-                            <button class="btn btn-lg btn-dark"><a href="">Register for Thingspeak</a></button>
+                            <button class="btn btn-lg btn-dark"><a style="color:black;" href="https://thingspeak.com/login?skipSSOCheck=true" target="blank">Register to ThingSpeak</a></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <p style="text-align: center;">&copy; 2021-22 IOT Energy Monitoring</p>
+        <footer class="footer" style="position: absolute;width:99%;bottom: 0;height: 60px;">
+            <p style="text-align: center;">&copy; 2021-22 IoT and Web Based Electrical Energy Monitoring System</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
