--- a/static/forgot.css
+++ b/static/forgot.css
@@ -1,12 +1,12 @@
 body{
-    background:#c2effd;
+    background: linear-gradient(to right,#eae9ef, #a599ff );
 }
 .panel{
     border-radius: 20px;
-    background: linear-gradient(145deg,#72d9f8, #0490c7 );
-    /*
-        *box-shadow: 20px 20px 60px #cacaca, -20px -20px 60px #ffffff;
-    */
+    background: linear-gradient(145deg,#a2bbff, #6992fa );
+    
+    box-shadow: 20px 20px 60px #868080, -20px -20px 60px #ffffff;
+    
     border: none;
 }
 .form-gap {
