--- a/static/index.css
+++ b/static/index.css
@@ -1,11 +1,10 @@
-html,
-body {
+html,body {
     margin: 0;
     height: 100%;
 }
 body{
 
-    background: linear-gradient(145deg,#72d9f8, #0490c7 );
+    background: linear-gradient(to right,#f9a87c, #8290f9 );
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,6 +17,8 @@ body{
 .footer{
     padding: 50px;
 }
+
+/*about*/
 .container-fluid{
     padding: 30px;
 }
@@ -25,13 +26,55 @@ body{
     padding: 20px;
 }
 .btn{
-    border: none;
-  background-color: rgb(104, 245, 233);
-  font-size: 15px;
+  border: none;
+  background: linear-gradient(to right,#c4c1db, #ddd7f8 );
+  
+  font-size: 20px;
   font-weight: bold;
-  width:20%;
-  height: 40px;
+  width:30%;
+  height: 50px;
   border-radius: 6px;
-  box-shadow: 0px 0px 20px rgb(34, 21, 89);
+  box-shadow: 0px 0px 20px rgb(82, 81, 83);
   cursor: pointer;
+}
+.col button:hover{
+    background-color: blue;
+}
+.btn:hover{
+    background: linear-gradient(to right,rgb(252, 214, 153),rgb(245, 174, 155));
+}
+
+
+.main{
+    padding-top: 1%;
+    width: 80%; 
+    display: table;
+    
+  }
+  .sub_main{
+    display: table-row; 
+    text-align: justify;
+    
+  }
+  
+  .right_page{
+    display: table-cell;
+    border-radius:15px ;
+    background: linear-gradient(to right,#f9a87c, #8290f9 );
+    box-shadow: 0px 5px 15px rgb(9, 8, 9);
+    padding: 20px;
+
+  }
+.submit{
+    font-size:20px;
+    width:20%;
+    height:40px;
+    font-weight: bold;
+    border-radius: 10px;
+    border:none;
+    background-color: #8290f9;
+    box-shadow: 0px 5px 15px rgb(9, 8, 9);
+}
+textarea{
+    background-color: bisque;
 }
