--- a/static/nav.css
+++ b/static/nav.css
@@ -1,28 +1,25 @@
 /* Add a black background color to the top navigation */
-body{
-    
-    color:white;
-}
-.topnav {
-   
+.topnav {  
     overflow: hidden;
-    background-color: black;
+    box-shadow: 0px 15px 20px -20px rgb(33, 37, 36);
+    border-radius: 30px;
   } 
 .topnav a {
     float: right;
-    color: #e5f8d5;
+    color: #010101;
     text-align: center;
     padding: 15px 30px;
     text-decoration: none;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: rgb(185, 243, 179);
+    background-color: rgb(113, 111, 196);
     border-radius: 30px;
-    color: black;
+    color: rgb(244, 241, 241);
   }
   
   /* Add a color to the active/current link */
